--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -22,6 +22,9 @@
 @modal-body-padding: @padding-lg;
 @modal-header-padding-horizontal: @padding-lg;
 
+@border-color-base: hsv(0, 0, 85%); // base border outline a component
+@border-color-split: hsv(0, 0, 94%); // split border inside a component
+
 // from compact.less
 @line-height-base: 1.66667;
 @mode: compact;
