--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -16,8 +16,18 @@
   .ant-descriptions-view {
     border: none;
   }
+  #card-content {
+    border: none;
+  }
+  #entity-child-counts {
+    border-top: 1px solid @border-color-split;
+    padding: @padding-sm;
+    nz-space {
+      width: 100%;
+    }
+  }
 }
 
 #popover-content {
-  width: 400px;
+  width: 500px;
 }
