--- a/client/src/app/components/shared/variants-menu/variants-menu.component.less
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.less
@@ -1,3 +1,5 @@
+@import 'global-variables.less';
+
 :host {
   display: block;
 }
@@ -15,7 +17,7 @@
 
 #variant-tags {
   cvc-variant-pill {
-    margin-bottom: .5em;
+    margin-bottom: @default-padding-xs;
   }
-  margin-bottom: -.5em;
+  margin-bottom: @default-padding-xs;
 }
