--- a/client/src/app/components/variants/variant-hovercard/variant-hovercard.component.html
+++ b/client/src/app/components/variants/variant-hovercard/variant-hovercard.component.html
@@ -1,6 +1,6 @@
 <div id="popover-content">
   <ng-container *ngIf="variant$ | ngrxPush as variant">
-    <nz-card [nzTitle]="cardTitle"
+    <nz-card [nzTitle]="cardTitle" nzBordered="false"
       id="card-content">
       <ng-template #cardTitle>
         <i nz-icon
