--- a/client/src/app/components/shared/variants-menu/variants-menu.component.less
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.less
@@ -5,19 +5,30 @@
 }
 
 #variant-filters {
-
+  // need to specify a width to the filters form, or the name filter
+  // input will change its width depending on if its nameInputClearTpl is displayed
+  // displayed
   #name-filter-group {
     width: 175px;
   }
-
+  // all form items get a right margin which creates an unsightly gap on the right :(
+  // so we remove that here
   nz-form-item:last-child {
     margin-right: 0;
   }
 }
 
 #variant-tags {
+  // provide margins between rows of tags by applying a margin to each
   cvc-variant-pill {
     margin-bottom: @default-padding-xs;
   }
-  margin-bottom: @default-padding-xs;
+  // pull up the bottom margin of the card by the same height as the tag
+  // margins we apply above otherwise the bottom margin will be too large
+  margin-bottom: -@default-padding-xs;
+}
+
+#load-more-btn {
+  // apply the same margin to the button row as the card margin
+  margin-top: @default-padding-sm;
 }
