--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -6,32 +6,38 @@
 }
 
 :host ::ng-deep {
-  // remove card body padding
   .ant-card-body {
+    // remove card body padding
     padding: 0;
     // card title has a -1 bottom margin for some reason, partially occluding nz-description's top border
     margin-top: 1px;
   }
-  // removes nz-description container border -
-  // nz-card does provide an nzBordered option, but its label backgrounds
-  // and compact mode are only available with ts borders toggled on
+
   .ant-descriptions-view {
+    // removes nz-description container border -
+    // nz-card does provide an nzBordered option, but its label backgrounds
+    // and compact mode are only applied when its borders are toggled on
     border: none;
   }
+
   #entity-child-counts {
     // nz-description no longer has a border, so here we need to add one
     // to provide a divider between the entity details and this child-count row
     border-top: 1px solid @border-color-split;
+    // apply a small padding so entity-child tags aren't flush with popover edges
     padding: @padding-sm;
-    // nz-space doesn't automatically expand to fit available horizontal space :(
+
     nz-space {
+      // nz-space doesn't automatically expand to fit available horizontal space :(
       width: 100%;
     }
+
     nz-space-item:last-child {
       // and it applies its margin-right space to the final element, which breaks symmetry :(
       margin-right: 0 !important; // TODO determine a more precise selector so this !important may be removed
+
       nz-tag {
-        // tags also have a margin-right, we can remove that b/c we rely on nz-space
+        // tags also have a margin-right, we can remove that b/c we rely on nz-space for intra-tag margins
         margin-right: 0;
       }
     }
@@ -39,5 +45,6 @@
 }
 
 #popover-content {
+  // need to specify a width to popover content or else it won't be able to correctly calculate its display position
   min-width: 400px;
 }
