--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -23,7 +23,8 @@
             </ng-container>
             <ng-container *ngIf="evidence.drugs.length > 1">{{ ' (' + evidence.drugInteractionType + ')' }}</ng-container>
         </nz-row>
-        <nz-row><b>Disease:&nbsp;</b>{{ evidence.disease.name }}</nz-row>
+        <nz-row *ngIf="evidence.disease"><b>Disease:&nbsp;</b>{{ evidence.disease.displayName }}</nz-row>
+        <nz-row *ngIf="!evidence.disease"><b>Disease:&nbsp;</b><i>Not Applicable</i></nz-row>
         <nz-row [ngPlural]="evidence.phenotypes.length">
             <ng-template ngPluralCase="=0"><b>Associated Phenotype:&nbsp;</b> <i>-</i></ng-template>
             <ng-template ngPluralCase="=1"><b>Associated Phenotype:&nbsp;</b></ng-template>
@@ -38,12 +39,12 @@
           <ng-template ngPluralCase="=ASCO"><b>ASCO ID:&nbsp;</b></ng-template>
           {{ evidence.source.citationId }}
         </nz-row>
-        <nz-row *ngIf="evidence.clinicalTrials" [ngPlural]="evidence.clinicalTrials.length">
+        <nz-row *ngIf="evidence.source.clinicalTrials" [ngPlural]="evidence.source.clinicalTrials.length">
             <ng-template ngPluralCase="=0"><b>Clinical Trial:&nbsp;</b> <i>-</i></ng-template>
             <ng-template ngPluralCase="=1"><b>Clinical Trial:&nbsp;</b></ng-template>
             <ng-template ngPluralCase="other"><b>Clinical Trials:&nbsp;</b></ng-template>
             <ng-container *ngFor="let t of evidence.source.clinicalTrials; let last = last">
-              {{ t.id }} <ng-container *ngIf="!last">,&nbsp;</ng-container>
+              {{ t.nctId }} <ng-container *ngIf="!last">,&nbsp;</ng-container>
             </ng-container>
         </nz-row>
         <nz-row><b>Evidence Rating:&nbsp;</b>{{ evidence.evidenceRating }}</nz-row>
