Make assertion browse component toggleable between table and card view

--- a/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
+++ b/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
@@ -2,12 +2,15 @@
 <nz-page-header class="site-page-header">
   <nz-page-header-title>
     <i nz-icon nzType="civic:assertion"></i>
-    Assertions
+    Assertions Card View
     <span nz-typography nzType="secondary"  *ngIf="(isLoading$ | ngrxPush)">Loading...</span>
   </nz-page-header-title>
+  <nz-page-header-extra>
+    Card View <nz-switch [(ngModel)]="tableView"></nz-switch> Table View
+  </nz-page-header-extra>
 
   <nz-page-header-content>
-    <div nz-row>
+    <div *ngIf="tableView" nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
           <nz-table #assertionsTable
@@ -169,6 +172,13 @@
             </tbody>
           </nz-table>
         </div>
+      </div>
+    </div>
+    <div *ngIf="!tableView" nz-row>
+      <div nz-col [nzSpan]="24">
+        <ng-container *ngFor="let assertion of assertions$ | ngrxPush">
+          <cvc-assertion-card [assertion]="assertion"></cvc-assertion-card>
+        </ng-container>
       </div>
     </div>
   </nz-page-header-content>
