add very rudimentary quicksearch proof of concept

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -92,7 +92,7 @@
           </span>
         </div>
         <div nz-col nzFlex="auto">
-          <p>QuickSearch</p>
+          <cvc-quicksearch></cvc-quicksearch>
         </div>
         <div nz-col nzFlex="auto">
           <p>Menu</p>
