--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -12,55 +12,91 @@
           <nz-timeline-item *ngFor="let e of events"
             [nzDot]="timelineDotTemplate">
             <ng-template #timelineDotTemplate>
-              <ng-container *ngIf="iconColorForEventAction(e.action) !== 'default'; else defaultPrimaryColor">
-                <i nz-icon
-                  [nzType]="iconNameForEventAction(e.action)"
-                  [nzTwotoneColor]="iconColorForEventAction(e.action)"
-                  nzTheme="twotone"
-                  class="item-icon"></i>
-              </ng-container>
-              <ng-template #defaultPrimaryColor>
-                <i nz-icon
-                  [nzType]="iconNameForEventAction(e.action)"
-                  nzTheme="twotone"
-                  class="item-icon"></i>
-              </ng-template>
+              <cvc-user-avatar [user]="e.originatingUser" size="small"></cvc-user-avatar>
+
+              <!-- <ng-container *ngIf="iconColorForEventAction(e.action) !== 'default'; else defaultPrimaryColor">
+                   <i nz-icon
+                   [nzType]="iconNameForEventAction(e.action)"
+                   [nzTwotoneColor]="iconColorForEventAction(e.action)"
+                   nzTheme="twotone"
+                   class="item-icon"></i>
+                   </ng-container>
+                   <ng-template #defaultPrimaryColor>
+                   <i nz-icon
+                   [nzType]="iconNameForEventAction(e.action)"
+                   nzTheme="twotone"
+                   class="item-icon"></i>
+                   </ng-template> -->
             </ng-template>
-            <div class="event-feed-item">
-              <nz-divider nz-tooltip
-                [nzTooltipTitle]="e.createdAt | date"
-                nzTooltipPlacement="topRight"
-                [nzText]="e.createdAt | timeago"
-                nzPlain="true"
-                nzOrientation="right"></nz-divider>
-              <nz-space>
-                <nz-space-item>
-                  <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
-                </nz-space-item>
-                <nz-space-item>
-                  <span>{{ verbiageForEvent(e) }}</span>
-                </nz-space-item>
-                <nz-space-item>
-                  <ng-container [ngSwitch]="e.subject.__typename">
-                    <span *ngSwitchCase="'Gene'"><cvc-gene-pill [gene]="e.subject"></cvc-gene-pill></span>
-                    <span *ngSwitchDefault>{{ e.subject.name }}</span>
+            <nz-card nzBordered="false"
+              [nzTitle]="eventCardTitle"
+              [nzExtra]="eventCardExtra"
+              class="event-feed-card">
+
+              <ng-template #eventCardTitle>
+
+                <!-- user tag -->
+                <cvc-user-tag [user]="e.originatingUser"></cvc-user-tag>
+
+                <!-- event action -->
+                <span nz-typography>{{ verbiageForEvent(e) }}</span>
+
+                <!-- event subject -->
+                <ng-container [ngSwitch]="e.subject.__typename">
+                  <ng-container *ngSwitchCase="'Gene'">
+                    <cvc-gene-tag [gene]="e.subject"></cvc-gene-tag>
                   </ng-container>
-                </nz-space-item>
-                <nz-space-item>
-                  <span *ngIf="e.organization"> on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
-                                    </span>
-                </nz-space-item>
-              </nz-space>
-            </div>
-            <ng-container *ngIf="e.originatingObject"
-              [ngSwitch]="e.originatingObject.__typename">
-              <nz-card *ngSwitchCase="'Comment'"> {{ e.originatingObject.comment }} </nz-card>
-              <nz-card *ngSwitchCase="'Flag'"> {{ commentForFlagEvent(e) }} </nz-card>
-              <nz-card *ngSwitchCase="'Revision'">
-                <cvc-user-pill [user]="e.originatingObject.revisor"></cvc-user-pill>
-                {{ e.originatingObject.name }} to {{ e.originatingObject.linkoutData.name }}
-              </nz-card>
-            </ng-container>
+                  <ng-container *ngSwitchCaseDefault>{{ e.subject.name }}</ng-container>
+                </ng-container>
+
+                <!-- user organization -->
+                <ng-container *ngIf="e.organization">
+                  <span nz-typography>on behalf of</span>
+                  <cvc-org-tag [org]="e.organization"></cvc-org-tag>
+                </ng-container>
+              </ng-template>
+
+              <!-- timestamp template -->
+              <ng-template #eventCardExtra>
+                {{ e.createdAt | timeago }}
+              </ng-template>
+            </nz-card>
+
+            <!-- <div class="event-feed-item">
+                 <nz-divider nz-tooltip
+                 [nzTooltipTitle]="e.createdAt | date"
+                 nzTooltipPlacement="topRight"
+                 [nzText]="e.createdAt | timeago"
+                 nzPlain="true"
+                 nzOrientation="right"></nz-divider>
+                 <nz-space>
+                 <nz-space-item>
+                 <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
+                 </nz-space-item>
+                 <nz-space-item>
+                 <span>{{ verbiageForEvent(e) }}</span>
+                 </nz-space-item>
+                 <nz-space-item>
+                 <ng-container [ngSwitch]="e.subject.__typename">
+                 <span *ngSwitchCase="'Gene'"><cvc-gene-pill [gene]="e.subject"></cvc-gene-pill></span>
+                 <span *ngSwitchDefault>{{ e.subject.name }}</span>
+                 </ng-container>
+                 </nz-space-item>
+                 <nz-space-item>
+                 <span *ngIf="e.organization"> on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
+                 </span>
+                 </nz-space-item>
+                 </nz-space>
+                 </div> -->
+            <!-- <ng-container *ngIf="e.originatingObject"
+                 [ngSwitch]="e.originatingObject.__typename">
+                 <nz-card *ngSwitchCase="'Comment'"> {{ e.originatingObject.comment }} </nz-card>
+                 <nz-card *ngSwitchCase="'Flag'"> {{ commentForFlagEvent(e) }} </nz-card>
+                 <nz-card *ngSwitchCase="'Revision'">
+                 <cvc-user-pill [user]="e.originatingObject.revisor"></cvc-user-pill>
+                 {{ e.originatingObject.name }} to {{ e.originatingObject.linkoutData.name }}
+                 </nz-card>
+                 </ng-container> -->
           </nz-timeline-item>
         </nz-timeline>
         <ng-container *ngIf="pageInfo$ | ngrxPush as pageInfo">
@@ -96,4 +132,4 @@
       </nz-col>
     </nz-row>
   </nz-card>
-  </ng-container>
+</ng-container>
