--- a/client/src/app/components/shared/org-tag/org-tag.component.html
+++ b/client/src/app/components/shared/org-tag/org-tag.component.html
@@ -1,4 +1,4 @@
-<nz-tag>
+<nz-tag nzColor="cyan">
   <i nz-icon nzType="civic-organization"></i>
-  <span nz-typography>{{ org.name }}</span>
+  {{ org.name }}
 </nz-tag>
