--- a/client/src/app/components/shared/user-tag/user-tag.component.html
+++ b/client/src/app/components/shared/user-tag/user-tag.component.html
@@ -1,4 +1,4 @@
 <nz-tag nzColor="geekblue">
-  <i nz-icon nzType="civic-curator"></i>
+  <i nz-icon [nzType]="icon"></i>
   {{ user.displayName }}
 </nz-tag>
