--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -7,97 +7,11 @@
         *ngIf="subscribable"></i> {{ subscribableName }} Events
     </ng-template>
     <nz-row [nzGutter]="16">
-      <nz-col nzSpan="18">
+      <nz-col nzSpan="20">
+        <ng-container *ngIf="events.length">
+          <cvc-event-timeline [events]="events"></cvc-event-timeline>
+        </ng-container>
         <nz-timeline *ngIf="events.length">
-          <nz-timeline-item *ngFor="let e of events"
-            [nzDot]="timelineDotTemplate">
-            <ng-template #timelineDotTemplate>
-              <cvc-user-avatar [user]="e.originatingUser" size="small"></cvc-user-avatar>
-
-              <!-- <ng-container *ngIf="iconColorForEventAction(e.action) !== 'default'; else defaultPrimaryColor">
-                   <i nz-icon
-                   [nzType]="iconNameForEventAction(e.action)"
-                   [nzTwotoneColor]="iconColorForEventAction(e.action)"
-                   nzTheme="twotone"
-                   class="item-icon"></i>
-                   </ng-container>
-                   <ng-template #defaultPrimaryColor>
-                   <i nz-icon
-                   [nzType]="iconNameForEventAction(e.action)"
-                   nzTheme="twotone"
-                   class="item-icon"></i>
-                   </ng-template> -->
-            </ng-template>
-            <nz-card nzBordered="false"
-              [nzTitle]="eventCardTitle"
-              [nzExtra]="eventCardExtra"
-              class="event-feed-card">
-
-              <ng-template #eventCardTitle>
-
-                <!-- user tag -->
-                <cvc-user-tag [user]="e.originatingUser"></cvc-user-tag>
-
-                <!-- event action -->
-                <span nz-typography>{{ verbiageForEvent(e) }}&nbsp;</span>
-
-                <!-- event subject -->
-                <ng-container [ngSwitch]="e.subject.__typename">
-                  <ng-container *ngSwitchCase="'Gene'">
-                    <cvc-gene-tag [gene]="e.subject"></cvc-gene-tag>
-                  </ng-container>
-                  <ng-container *ngSwitchCaseDefault>{{ e.subject.name }}</ng-container>
-                </ng-container>
-
-                <!-- user organization -->
-                <ng-container *ngIf="e.organization">
-                  <span nz-typography>on behalf of&nbsp;</span>
-                  <cvc-org-tag [org]="e.organization"></cvc-org-tag>
-                </ng-container>
-              </ng-template>
-
-              <!-- timestamp template -->
-              <ng-template #eventCardExtra>
-                {{ e.createdAt | timeago }}
-              </ng-template>
-            </nz-card>
-
-            <!-- <div class="event-feed-item">
-                 <nz-divider nz-tooltip
-                 [nzTooltipTitle]="e.createdAt | date"
-                 nzTooltipPlacement="topRight"
-                 [nzText]="e.createdAt | timeago"
-                 nzPlain="true"
-                 nzOrientation="right"></nz-divider>
-                 <nz-space>
-                 <nz-space-item>
-                 <cvc-user-pill [user]="e.originatingUser"></cvc-user-pill>
-                 </nz-space-item>
-                 <nz-space-item>
-                 <span>{{ verbiageForEvent(e) }}</span>
-                 </nz-space-item>
-                 <nz-space-item>
-                 <ng-container [ngSwitch]="e.subject.__typename">
-                 <span *ngSwitchCase="'Gene'"><cvc-gene-pill [gene]="e.subject"></cvc-gene-pill></span>
-                 <span *ngSwitchDefault>{{ e.subject.name }}</span>
-                 </ng-container>
-                 </nz-space-item>
-                 <nz-space-item>
-                 <span *ngIf="e.organization"> on behalf of <cvc-org-pill [org]="e.organization"></cvc-org-pill>
-                 </span>
-                 </nz-space-item>
-                 </nz-space>
-                 </div> -->
-            <!-- <ng-container *ngIf="e.originatingObject"
-                 [ngSwitch]="e.originatingObject.__typename">
-                 <nz-card *ngSwitchCase="'Comment'"> {{ e.originatingObject.comment }} </nz-card>
-                 <nz-card *ngSwitchCase="'Flag'"> {{ commentForFlagEvent(e) }} </nz-card>
-                 <nz-card *ngSwitchCase="'Revision'">
-                 <cvc-user-pill [user]="e.originatingObject.revisor"></cvc-user-pill>
-                 {{ e.originatingObject.name }} to {{ e.originatingObject.linkoutData.name }}
-                 </nz-card>
-                 </ng-container> -->
-          </nz-timeline-item>
         </nz-timeline>
         <ng-container *ngIf="pageInfo$ | ngrxPush as pageInfo">
           <div nz-list-load-more
@@ -111,7 +25,7 @@
           </div>
         </ng-container>
       </nz-col>
-      <nz-col nzSpan="6">
+      <nz-col nzSpan="4">
         <cvc-participant-list listTitle="Participants"
           [participantList]="participants$ | ngrxPush"
           (participantSelectedEvent)="onParticipantSelected($event)">
