nav fix, quicksearch working with more entities

--- a/client/src/app/components/shared/quicksearch/quicksearch-component.html
+++ b/client/src/app/components/shared/quicksearch/quicksearch-component.html
@@ -1,18 +1,23 @@
 <nz-input-group nzSize="large" [nzSuffix]="suffixIcon">
-  <input placeholder="input here" nz-input [(ngModel)]="searchQuery" (ngModelChange)="refresh()"
-    [nzAutocomplete]="auto" />
+  <input placeholder="Quicksearch" nz-input [(ngModel)]="searchQuery" (ngModelChange)="refresh()"
+      [nzAutocomplete]="auto" 
+      (keyup.enter)="quicksearchSelected($event)"
+    />
 </nz-input-group>
 <ng-template #suffixIcon>
   <i nz-icon nzType="search"></i>
 </ng-template>
 
-<nz-autocomplete #auto>
+<nz-autocomplete  #auto>
   <ng-container *ngFor="let res of searchResults$ | ngrxPush">
-    <nz-auto-option [nzValue]="res.id">
-      <span>
-        <i nz-icon nzType="civic:{{ res.resultType | lowercase }}"></i>
-        {{res.previewText}}
-      </span>
-    </nz-auto-option>
+    <a [routerLink]="urlForResult(res)">
+      <nz-auto-option (click)="searchQuery = ''; refresh()" [nzValue]="urlForResult(res)">
+        <span>
+          <i nz-icon [nzType]="iconNameForResult(res)"></i>
+          <span innerHTML={{res.name}}></span><br />
+          <span innerHTML={{res.matchingText}}></span>
+        </span>
+      </nz-auto-option>
+    </a>
   </ng-container>
 </nz-autocomplete>
