--- a/client/src/app/components/shared/event-feed/event-feed.component.less
+++ b/client/src/app/components/shared/event-feed/event-feed.component.less
@@ -2,10 +2,7 @@
   display: block;
 }
 
-:host ::ng-deep {
-  .ant-timeline-item {
-    .item-icon {
-      font-size: 24px;
-    }
-  }
+.timeline {
+  padding-top: 6px;
+  padding-left: 6px;
 }
