--- a/client/src/app/components/shared/event-timeline/event-timeline.component.less
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.less
@@ -5,8 +5,11 @@
 }
 
 .timeline-item {
+  .item-icon {
+    font-size: 24px;
+  }
   .description, .timestamp {
-    margin-top: 3px;
+    margin-top: 2px;
   }
   .description {
     margin-left: @margin-sm;
