removed user-avatar 'border' feature

--- a/client/src/app/components/shared/event-timeline/event-timeline.component.html
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngFor="let event of events">
     <nz-timeline-item [nzDot]="timelineDotTemplate">
       <ng-template #timelineDotTemplate>
-        <cvc-user-avatar [user]="event.originatingUser" [border]="true"
+        <cvc-user-avatar [user]="event.originatingUser"
           size="small"></cvc-user-avatar>
 
         <!-- <ng-container *ngIf="iconColorForEventAction(event.action) !== 'default'; else defaultPrimaryColor">
